# QT-CAD

./: CMakeLists.txt  README.txt
src/App/: Bezier.h  CMakeLists.txt  Line.h  MainWindow.cpp  MainWindow.h  Painter.cpp  Painter.h  Shapes.h  main.cpp  windowexample.cpp  windowexample.h
src/App/Controller/: CMakeLists.txt  Command.h  CommandArc.cpp  CommandArc.h  CommandBezier.cpp  CommandBezier.h  CommandClear.cpp  CommandClear.h  CommandExit.cpp  CommandExit.h  CommandIdle.cpp  CommandIdle.h  CommandLine.cpp  CommandLine.h  CommandLoadFile.cpp  CommandLoadFile.h  CommandNewFile.cpp  CommandNewFile.h  CommandRedo.cpp  CommandRedo.h  CommandSave.cpp  CommandSave.h  CommandSaveAs.cpp  CommandSaveAs.h  CommandSetCurrentFile.cpp  CommandSetCurrentFile.h  CommandShape.h  CommandTranslateCanvas.cpp  CommandTranslateCanvas.h  CommandUndo.cpp  CommandUndo.h  CommandZoom.cpp  CommandZoom.h  ShapeCommand.cpp  ShapeCommand.h
src/App/Main/: App.cpp  App.h  CMakeLists.txt  CommandManager.h  main.cpp  resources.qrc
src/App/Model/: CADFileManager.h  CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  CommandManager.cpp  CommandManager.h  Handler.cpp  Handler.h  Manager.cpp  Manager.h  Model.cpp  Model.h  PointMapper.cpp  ShapeVisitor.h  ShapeVisitorLoadFile.cpp  ShapeVisitorLoadFile.h  ShapeVisitorSaveFile.cpp  ShapeVisitorSaveFile.h  ViewMediator.cpp  ViewMediator.h
src/App/View/: CMakeLists.txt  Canvas.cpp  Canvas.h  MainWindow.cpp  MainWindow.h
src/Domain/: Arc.cpp  Arc.h  Bezier.cpp  Bezier.h  CADArc.cpp  CADArc.h  CADBezier.cpp  CADBezier.h  CADFile.cpp  CADFile.h  CADLine.cpp  CADLine.h  CADShape.h  CMakeLists.txt  File.cpp  File.h  Line.cpp  Line.h  Painter.cpp  Painter.h  Point.h  PointMapper.cpp  PointMapper.h  Rect.cpp  Rect.h  Shape.h  ShapeType.h  Size.h  ZoomFactor.h
src/Utilities/: CMakeLists.txt  Point.h  ShapeType.h  TemplateIterator.h
